# CUBE3D

./: CMakeLists.txt  README.md  STB_IMAGE_SETUP.md  aircraft_input_controller.h  app.cpp  app.h  app_v2.cpp  app_v2.h  app_v3.cpp  app_v3.h  app_v3~.h  behavior.h  build.bat  camera_behaviors.h  camera_entity.h  chase_camera_behavior.h  dds_loader.h  debug.h  entity.cpp  entity.h  entity_registry.h  flight_dynamics.cpp  flight_dynamics.h  flight_dynamics_behavior.h  gitignore  input_controller.h  main.cpp  main_v2.cpp  main_v3.cpp  math_utils.h  model.h  model_assimp.cpp  model_registry.h  normal_map_gen.h  orbit_camera_behavior.h  osd.h  renderer.h  renderer_d3d11.cpp  renderer_d3d12.cpp  renderer_opengl.cpp  (+9 more)
docs/: ADVANCED_ARCHITECTURE.md  ASSIMP_SETUP.md  D3D12_SCENE_MODE_ISSUE.md  DEBUG_USAGE.md  ECS_ARCHITECTURE.md  FLIGHT_INTEGRATION_PLAN.md  GIT_SETUP.md  IMPROVEMENTS.md  INSTANCING_COMPLETE.md  MIGRATION_GUIDE.md  NORMAL_MAPPING_COMPLETE.md  NORMAL_MAPPING_STATUS.md  NORMAL_MAP_TESTING.md  OSD_README.md  QUICKSTART_INSTANCING.md  SCENE_LOADER_README.md  TEXTURE_CACHE_GUIDE.md  TEXTURE_IMPLEMENTATION.md
scenes/: scene_flight.json
